--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 </head>
 
@@ -19,12 +19,12 @@
     <div class="container text-white">
         <img class="image" src="assets/images/michael-jordan-black-and-white-Wallpaper-1080p-number-Xdl.jpg">
 
-        
+
         <div id="wrapper">
             <br>
             <br>
 
-                <h1 class="text-center">Trivia! Trivia! Trivia!</h1>
+            <h1 class="text-center">Sports Trivia!</h1>
             <div>
                 <h3 class="text-center">Time remaining: </h3>
                 <h3 class="text-center" id="time">01:00</h3>
